# weather-spark-pipeline

./: .gitignore  README.md  main.py  pyproject.toml  weather_categories.json
